public class DatiCondivisi {
    private Scatola[][] scatole;
    private Pallina pallina;

    private int largezzaSchermo;
    private int altezzaSchermo;

    private float inclinazioneX;
}
