public class Pallina {

    private int x;
    private int y;
    private int raggio;

    private int velocitaX;
    private int velocitaY;

    public void aggiornaPallina() {

    }

    public void simulazioneMovimento() {

    }

    public void disegnaPallina() {

    }
}
