public class Sabbia {
    private int volume;

    private int x;
    private int y;

    private int lunghezza;
    private int larghezza;

    private int altezzaBordi;

    private int livelloSabbiaSx;
    private int livelloSabbiaDx;

    private void aggiorna() {

    }
}
