public class Scatola {
    private Sabbia sabbia;

    public void aggiornaSabbia() {

    }

    public void visualizzaScatola() {

    }
}
