public class ThLeggiInclinazione extends Thread {

    public void run() {

    }
}
