public class ThScatola extends Thread {
    private Scatola scatola;
    private DatiCondivisi datiCondivisi;

    public void run() {

    }
}
